# profile.mobile.apps.native.attach-panel-voicerecoder

./: .cproject  .project  CMakeLists.txt  attach-panel-voicerecorder.manifest  attach-panel-voicerecorder.xml
inc/: attach-panel-voicerecorder.h
inc/utils/: audio-recorder-utils.h  config.h  logger.h
inc/view/: audio-recorder-view.h
packaging/: attach-panel-voicerecorder.spec
res/edje/: audio_recorder.edc
res/po/: CMakeLists.txt  POTFILES.in  af.po  ar.po  as.po  az.po  be_BY.po  bg.po  bn.po  bn_BD.po  ca.po  cs.po  da.po  de.po  el.po  el_GR.po  en.po  en_US.po  es.po  es_AR.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  ha.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  igbo.po  is.po  it.po  (+58 more)
res/sounds/: PreProcessedAudioAAC.raw  PreProcessedAudioAMR.raw  PreProcessedAudioPCM.raw  SampleAAC.aac  SampleAMR.amr
src/: attach-panel-voicerecorder.c
src/utils/: audio-recorder-utils.c
src/view/: audio-recorder-view.c
